404 images shouldn't overflow, correcting item list header being shrunk

--- a/src/components/EquippedItems/index.css
+++ b/src/components/EquippedItems/index.css
@@ -25,6 +25,7 @@
   align-self: center;
   max-width: 32px;
   max-height: 32px;
+  overflow: hidden;
 }
 
 .equipped-items-item-meta {
